fix menu spacing

--- a/app/assets/stylesheets/components/_auth_nav.scss
+++ b/app/assets/stylesheets/components/_auth_nav.scss
@@ -54,6 +54,7 @@
     background-color: #404143;
     height: 40px;
     display: flex; 
+    justify-content: center;
     align-items: center;
 }
 
@@ -92,6 +93,3 @@ width: 0;
     border-radius: 2px;
 }
 
-.big-pause {
-
-}
