--- a/app/assets/stylesheets/components/_song_menu.scss
+++ b/app/assets/stylesheets/components/_song_menu.scss
@@ -33,7 +33,7 @@
 .add-playlist-list {
     position: absolute;
     width: 150px;
-    left: -153px;
+    left: -154px;
     top: -1px;
     z-index: 10;
 }
